--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 <!doctype html>
-<html>
+<html lang ="en">
 	<head>
+		<meta charset="UTF-8">
 		<title>My Home Page</title>
 	</head>
 	<body>
@@ -17,5 +18,7 @@
 		cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non
 		proident, sunt in culpa qui officia deserunt mollit anim id est laborum. nulla pariatur. Excepteur sint occaecat cupidatat non
 		proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+
+		<img src="logo.png">
 	</body>
 </html>
